deploy/030-Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: libreoffice
  annotations:
    image.openshift.io/triggers=[{"from":{"kind":"ImageStreamTag","name":"libreoffice-online-k8s:latest"},"fieldPath":"spec.template.spec.containers[?(@.name='libreoffice')].image"}]
  labels:
    app: libreoffice
spec:
  replicas: 1
  selector:
   matchLabels:
     deployment: libreoffice
     app: libreoffice

  template: 
    metadata:
      labels:
        deployment: libreoffice
        app: libreoffice
    spec:
      containers:
        - name: libreoffice
          image: docker.io/ctron/libreoffice-online-k8s:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9980
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
            - name: tls
              mountPath: "/etc/tls"
              readOnly: true
            - name: child-roots
              mountPath: /opt/lool/child-roots
      volumes:
        - name: config
          configMap:
            name: libreoffice-config
        - name: tls
          secret:
            defaultMode: 420
            secretName: libreoffice-tls
        - name: child-roots
          emptyDir: {}
