deploy/030-DeploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: libreoffice
  labels:
    app: libreoffice
spec:
  template: 
    metadata:
      labels:
        deployment: libreoffice
        app: libreoffice
    spec:
      containers:
        - name: libreoffice
          image: libreoffice
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9980
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
            - name: tls
              mountPath: "/etc/tls"
              readOnly: true
            - name: child-roots
              mountPath: /opt/lool/child-roots
      volumes:
        - name: config
          configMap:
            name: libreoffice-config
        - name: tls
          secret:
            defaultMode: 420
            secretName: libreoffice-tls
        - name: child-roots
          emptyDir: {}

  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - libreoffice
        from:
          kind: ImageStreamTag
          name: libreoffice-online-k8s:latest

  strategy: 
    type: Rolling
  replicas: 1
  selector:
    deployment: libreoffice
    app: libreoffice
