deploy/040-Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: libreoffice
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: libreoffice-tls
  labels:
    app: libreoffice
spec:
  selector:
   deployment: libreoffice
   app: libreoffice
  ports:
    - protocol: TCP
      port: 9980
      targetPort: 9980
